--- a/lib/README
+++ b/lib/README
@@ -1,46 +1,15 @@
+# Project Specific Libraries
 
-This directory is intended for project specific (private) libraries.
-PlatformIO will compile them to static libraries and link into executable file.
+Wrote some custom libraries for the spar sensor. The major one was the one wire library, however a stripped down version of a library for the HX711 chips we'll be using was written.
 
-The source code of each library should be placed in a an own separate directory
-("lib/your_library_name/[here are source files]").
+## One Wire
 
-For example, see a structure of the following two libraries `Foo` and `Bar`:
+One wire communication system we're using for this project. A single wire system was needed to help reduce the weight of conductors in the aircraft.
 
-|--lib
-|  |
-|  |--Bar
-|  |  |--docs
-|  |  |--examples
-|  |  |--src
-|  |     |- Bar.c
-|  |     |- Bar.h
-|  |  |- library.json (optional, custom build options, etc) https://docs.platformio.org/page/librarymanager/config.html
-|  |
-|  |--Foo
-|  |  |- Foo.c
-|  |  |- Foo.h
-|  |
-|  |- README --> THIS FILE
-|
-|- platformio.ini
-|--src
-   |- main.c
+Communicates using edges to account for clock rates varying across the different devices on the bus.
 
-and a contents of `src/main.c`:
-```
-#include <Foo.h>
-#include <Bar.h>
+## HX711
 
-int main (void)
-{
-  ...
-}
+Wrote a custom library for this rather than re-using existing code so iut would be better optimized for the hardware. It was written to be the minimum amount of code needed to interface with the HX711 while also making use of the hardware specific to the chip used to be faster at doing reads.
 
-```
-
-PlatformIO Library Dependency Finder will find automatically dependent
-libraries scanning project source files.
-
-More information about PlatformIO Library Dependency Finder
-- https://docs.platformio.org/page/librarymanager/ldf.html
+Since the spar sensors will only be reading a single channel and sending the raw ADC value onwards to the motherboard, that's all this library was designed to do.
